--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 /* Global Styles */
 :root {
-  --primary-color: #2a3434;
+  --primary-color: #5c6e6e;
   --dark-color: #343a40;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
